# cpp_opengl_glfw_init

./: CMakeLists.txt  README.md  run.bat
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
src/: main.cpp
